--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.GithubApp2"
         tools:targetApi="31">
         <activity
+            android:name=".activity.FavoriteActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ThemeActivity"
             android:exported="false" />
         <activity
